--- a/apps/WEB/PruebaTecnicaWDL.WebApp/PruebaTecnicaWDL.WebApp.csproj
+++ b/apps/WEB/PruebaTecnicaWDL.WebApp/PruebaTecnicaWDL.WebApp.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\PruebaTecnicaWDL.Infrastructure\PruebaTecnicaWDL.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
